# helpdesk-ai

./: .env.example  PROGRESS.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
eval-harness/: README.md  pyproject.toml
eval-harness/results/: report_20260404T225340.json  report_20260404T225340.md  report_20260404T233152.json  report_20260404T233152.md  report_20260413T001912.json  report_20260413T001912.md  report_20260424T013555.json  report_20260424T013555.md  report_20260424T014445.json  report_20260424T014445.md  report_20260424T014506.json  report_20260424T014506.md  report_20260424T014602.json  report_20260424T014602.md  report_20260424T015359.json  report_20260424T015359.md  report_20260424T015451.json  report_20260424T015451.md
eval-harness/src/: harness.py  judge.py  metrics.py  retrieval_eval.py
helpdesk-agent/: README.md  pyproject.toml
mcp-server/: README.md  pyproject.toml  seed_data.py
multi-agent/: ARCHITECTURE.md  README.md  pyproject.toml  run_scenarios.py
multi-agent/examples/: 02035b90.json  194aafb2.json  ac454bc9.json  d28fdd3f.json  error_handling_circular_guard.json  scenario_1_6c6545d1.json  scenario_2_2500104b.json  scenario_3_396f4e10.json  scenario_4_9e4a41e5.json
multi-agent/src/: context.py  flint_adapter.py  flint_orchestrator.py  main.py  messages.py  orchestrator.py  trace.py
multi-agent/src/agents/: base.py  escalation.py  resolution.py  triage.py
multi-agent/src/llm/: openai_client.py  protocol.py
multi-agent/src/memory/: agent_memory.py  token_counter.py
multi-agent/src/routing/: llm_router.py
(+19 files in other folders)
